--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-09 02:43 -->
+<!-- 2022-12-09 11:12 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org554b977">1. 笔记</a></li>
-<li><a href="#org446b1bc">2. 推送</a></li>
-<li><a href="#orgfd8fdf6">3. Git</a></li>
-<li><a href="#orga641174">4. XBox</a></li>
-<li><a href="#orgef8f397">5. Bilibili</a></li>
+<li><a href="#orgccc090c">1. 笔记</a></li>
+<li><a href="#org5835a14">2. 推送</a></li>
+<li><a href="#orgf39c439">3. Git</a></li>
+<li><a href="#org2c6288d">4. XBox</a></li>
+<li><a href="#orgf3f961c">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org554b977" class="outline-2">
-<h2 id="org554b977"><span class="section-number-2">1.</span> <a href="#org554b977">笔记</a></h2>
+<div id="outline-container-orgccc090c" class="outline-2">
+<h2 id="orgccc090c"><span class="section-number-2">1.</span> <a href="#orgccc090c">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org446b1bc" class="outline-2">
-<h2 id="org446b1bc"><span class="section-number-2">2.</span> <a href="#org446b1bc">推送</a></h2>
+<div id="outline-container-org5835a14" class="outline-2">
+<h2 id="org5835a14"><span class="section-number-2">2.</span> <a href="#org5835a14">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfd8fdf6" class="outline-2">
-<h2 id="orgfd8fdf6"><span class="section-number-2">3.</span> <a href="#orgfd8fdf6">Git</a></h2>
+<div id="outline-container-orgf39c439" class="outline-2">
+<h2 id="orgf39c439"><span class="section-number-2">3.</span> <a href="#orgf39c439">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga641174" class="outline-2">
-<h2 id="orga641174"><span class="section-number-2">4.</span> <a href="#orga641174">XBox</a></h2>
+<div id="outline-container-org2c6288d" class="outline-2">
+<h2 id="org2c6288d"><span class="section-number-2">4.</span> <a href="#org2c6288d">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgef8f397" class="outline-2">
-<h2 id="orgef8f397"><span class="section-number-2">5.</span> <a href="#orgef8f397">Bilibili</a></h2>
+<div id="outline-container-orgf3f961c" class="outline-2">
+<h2 id="orgf3f961c"><span class="section-number-2">5.</span> <a href="#orgf3f961c">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 02:43</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 11:12</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/tools.org">tools.org</a></td></tr>
 </table>
