--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-09 02:43 -->
+<!-- 2022-12-09 11:12 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -47,7 +47,7 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf5bf970">1. 文章列表</a></li>
+<li><a href="#org8668f6d">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -57,25 +57,25 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#orge1f6117">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org7ec750a">1</a> 所示.
 </p>
 
 
-<figure id="orge1f6117">
+<figure id="org7ec750a">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-orgf5bf970" class="outline-2">
-<h2 id="orgf5bf970"><span class="section-number-2">1.</span> <a href="#orgf5bf970">文章列表</a></h2>
+<div id="outline-container-org8668f6d" class="outline-2">
+<h2 id="org8668f6d"><span class="section-number-2">1.</span> <a href="#org8668f6d">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <div data-pagefind-ignore="all" class="sitemap-list">
 <ul class="org-ul">
 <li><span><a href="content/collections/index.html">收藏夹</a><span style="color:gray"> (collections)</span></span><span>2022-12-08 10:53</span></li>
 <li><span><a href="content/collections/word-of-the-year.html">Word of the year</a><span style="color:gray"> (collections)</span></span><span>2022-12-06 21:43</span></li>
-<li><span><a href="content/picore-adb.html">piCore 编译 ADB 小记</a><span style="color:gray"> (content)</span></span><span>2022-12-05 22:13</span></li>
-<li><span><a href="content/pcap2socks.html">使用 pcap2socks 加速 XBox</a><span style="color:gray"> (content)</span></span><span>2022-12-05 21:48</span></li>
+<li><span><a href="content/picore-adb.html">piCore 编译 ADB 小记</a></span><span>2022-12-05 22:13</span></li>
+<li><span><a href="content/pcap2socks.html">使用 pcap2socks 加速 XBox</a></span><span>2022-12-05 21:48</span></li>
 <li><span><a href="content/collections/tools.html">有用的工具</a><span style="color:gray"> (collections)</span></span><span>2022-12-05 21:48</span></li>
 <li><span><a href="content/old/NewYear-2019.html">New Year 2019 &#x2014; transition</a><span style="color:gray"> (old)</span></span><span>2022-12-05 21:18</span></li>
 <li><span><a href="content/old/NewYear-2018.html">New Year 2018</a><span style="color:gray"> (old)</span></span><span>2022-12-05 21:18</span></li>
@@ -99,9 +99,9 @@
 <li><span><a href="content/daily/2021-05-22.html">仿佛有点灰暗的一天</a><span style="color:gray"> (daily)</span></span><span>2022-10-10 12:17</span></li>
 <li><span><a href="content/daily/2021-05-18.html">Hello, 博客</a><span style="color:gray"> (daily)</span></span><span>2022-10-10 12:17</span></li>
 <li><span><a href="content/daily/2021-05-19.html">不知道要写啥的第二篇日记</a><span style="color:gray"> (daily)</span></span><span>2022-10-10 12:17</span></li>
-<li><span><a href="content/qq-group-export.html">导出QQ群成员</a><span style="color:gray"> (content)</span></span><span>2022-09-29 16:09</span></li>
+<li><span><a href="content/qq-group-export.html">导出QQ群成员</a></span><span>2022-09-29 16:09</span></li>
 <li><span><a href="content/daily/2022-09-28.html">保研回忆录</a><span style="color:gray"> (daily)</span></span><span>2022-09-29 10:48</span></li>
-<li><span><a href="content/gadgets.html">我的小玩意们</a><span style="color:gray"> (content)</span></span><span>2022-09-28 15:21</span></li>
+<li><span><a href="content/gadgets.html">我的小玩意们</a></span><span>2022-09-28 15:21</span></li>
 <li><span><a href="index.html">小渴栈</a></span><span>2022-09-27 21:44</span></li>
 </ul>
 </div>
@@ -113,7 +113,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 02:43</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 11:12</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/index.org">index.org</a></td></tr>
 </table>
