--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-10 02:43 -->
+<!-- 2022-12-11 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,50 +46,50 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0361c46">1. 妙妙文章</a>
+<li><a href="#org7468451">1. 妙妙文章</a>
 <ul>
-<li><a href="#org1be461e">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgf54419a">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgbd4d36d">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org8f09849">1.4. 关于编辑器</a></li>
-<li><a href="#orgea8474f">1.5. 关于代码</a>
+<li><a href="#org49ce9f6">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org89f9788">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org4db9a3f">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org2af3238">1.4. 关于编辑器</a></li>
+<li><a href="#orgc2a6d99">1.5. 关于代码</a>
 <ul>
-<li><a href="#org024f239">1.5.1. Lisp</a></li>
+<li><a href="#org2978f0b">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org96c3cc4">1.6. 关于CPU</a></li>
-<li><a href="#org0e97286">1.7. 关于算法</a>
+<li><a href="#org294d12d">1.6. 关于CPU</a></li>
+<li><a href="#org864d9da">1.7. 关于算法</a>
 <ul>
-<li><a href="#org78a1864">1.7.1. 关于随机</a></li>
+<li><a href="#org2c7d93e">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org157df14">1.8. 关于AI</a></li>
-<li><a href="#orga14b3b7">1.9. 关于软件 &#x2014; 面对复杂系统</a>
+<li><a href="#orge71717a">1.8. 关于AI</a></li>
+<li><a href="#org2866f37">1.9. 关于软件 &#x2014; 面对复杂系统</a>
 <ul>
-<li><a href="#orgeee9af7">1.9.1. Everything is a file</a></li>
-<li><a href="#org8404558">1.9.2. SQLite</a></li>
+<li><a href="#orgb313bde">1.9.1. Everything is a file</a></li>
+<li><a href="#orgced9c76">1.9.2. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org6e3a25b">1.10. 关于workflow</a></li>
+<li><a href="#orgbfe008f">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgdbfc0c5">2. 棒棒视频</a>
+<li><a href="#orgb64c309">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgc5635bf">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org190ed9c">2.2. 迷因水母</a></li>
-<li><a href="#orgfb81bd5">2.3. 纪录片</a></li>
-<li><a href="#org0aad68a">2.4. 各种剧</a></li>
-<li><a href="#org8bbba2e">2.5. 电影</a></li>
+<li><a href="#orgfa0a22e">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgfe90161">2.2. 迷因水母</a></li>
+<li><a href="#org0adb49e">2.3. 纪录片</a></li>
+<li><a href="#orgd2aa696">2.4. 各种剧</a></li>
+<li><a href="#org6ced972">2.5. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgedc22f2">3. 快乐游戏</a></li>
-<li><a href="#orgc7b0609">4. 宝藏博主</a></li>
-<li><a href="#org86758bb">5. 有意思的</a>
+<li><a href="#org091739c">3. 快乐游戏</a></li>
+<li><a href="#org3228740">4. 宝藏博主</a></li>
+<li><a href="#org27f0959">5. 有意思的</a>
 <ul>
-<li><a href="#org5a8ad19">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orga665ab7">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgc449c93">6. 我想玩的</a></li>
+<li><a href="#org69c8067">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -98,8 +98,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org0361c46" class="outline-2">
-<h2 id="org0361c46"><span class="section-number-2">1.</span> <a href="#org0361c46">妙妙文章</a></h2>
+<div id="outline-container-org7468451" class="outline-2">
+<h2 id="org7468451"><span class="section-number-2">1.</span> <a href="#org7468451">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -434,7 +434,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org6bd9b61">
+<figure id="org726faf5">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -507,8 +507,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org1be461e" class="outline-3">
-<h3 id="org1be461e"><span class="section-number-3">1.1.</span> <a href="#org1be461e">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org49ce9f6" class="outline-3">
+<h3 id="org49ce9f6"><span class="section-number-3">1.1.</span> <a href="#org49ce9f6">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -549,8 +549,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-orgf54419a" class="outline-3">
-<h3 id="orgf54419a"><span class="section-number-3">1.2.</span> <a href="#orgf54419a">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org89f9788" class="outline-3">
+<h3 id="org89f9788"><span class="section-number-3">1.2.</span> <a href="#org89f9788">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -584,8 +584,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgbd4d36d" class="outline-3">
-<h3 id="orgbd4d36d"><span class="section-number-3">1.3.</span> <a href="#orgbd4d36d">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org4db9a3f" class="outline-3">
+<h3 id="org4db9a3f"><span class="section-number-3">1.3.</span> <a href="#org4db9a3f">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -619,8 +619,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org8f09849" class="outline-3">
-<h3 id="org8f09849"><span class="section-number-3">1.4.</span> <a href="#org8f09849">关于编辑器</a></h3>
+<div id="outline-container-org2af3238" class="outline-3">
+<h3 id="org2af3238"><span class="section-number-3">1.4.</span> <a href="#org2af3238">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -636,8 +636,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgea8474f" class="outline-3">
-<h3 id="orgea8474f"><span class="section-number-3">1.5.</span> <a href="#orgea8474f">关于代码</a></h3>
+<div id="outline-container-orgc2a6d99" class="outline-3">
+<h3 id="orgc2a6d99"><span class="section-number-3">1.5.</span> <a href="#orgc2a6d99">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -662,8 +662,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org024f239" class="outline-4">
-<h4 id="org024f239"><span class="section-number-4">1.5.1.</span> <a href="#org024f239">Lisp</a></h4>
+<div id="outline-container-org2978f0b" class="outline-4">
+<h4 id="org2978f0b"><span class="section-number-4">1.5.1.</span> <a href="#org2978f0b">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -686,8 +686,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org96c3cc4" class="outline-3">
-<h3 id="org96c3cc4"><span class="section-number-3">1.6.</span> <a href="#org96c3cc4">关于CPU</a></h3>
+<div id="outline-container-org294d12d" class="outline-3">
+<h3 id="org294d12d"><span class="section-number-3">1.6.</span> <a href="#org294d12d">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -702,8 +702,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org0e97286" class="outline-3">
-<h3 id="org0e97286"><span class="section-number-3">1.7.</span> <a href="#org0e97286">关于算法</a></h3>
+<div id="outline-container-org864d9da" class="outline-3">
+<h3 id="org864d9da"><span class="section-number-3">1.7.</span> <a href="#org864d9da">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -722,8 +722,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org78a1864" class="outline-4">
-<h4 id="org78a1864"><span class="section-number-4">1.7.1.</span> <a href="#org78a1864">关于随机</a></h4>
+<div id="outline-container-org2c7d93e" class="outline-4">
+<h4 id="org2c7d93e"><span class="section-number-4">1.7.1.</span> <a href="#org2c7d93e">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -737,8 +737,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org157df14" class="outline-3">
-<h3 id="org157df14"><span class="section-number-3">1.8.</span> <a href="#org157df14">关于AI</a></h3>
+<div id="outline-container-orge71717a" class="outline-3">
+<h3 id="orge71717a"><span class="section-number-3">1.8.</span> <a href="#orge71717a">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -748,8 +748,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orga14b3b7" class="outline-3">
-<h3 id="orga14b3b7"><span class="section-number-3">1.9.</span> <a href="#orga14b3b7">关于软件 &#x2014; 面对复杂系统</a></h3>
+<div id="outline-container-org2866f37" class="outline-3">
+<h3 id="org2866f37"><span class="section-number-3">1.9.</span> <a href="#org2866f37">关于软件 &#x2014; 面对复杂系统</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -760,8 +760,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgeee9af7" class="outline-4">
-<h4 id="orgeee9af7"><span class="section-number-4">1.9.1.</span> <a href="#orgeee9af7">Everything is a file</a></h4>
+<div id="outline-container-orgb313bde" class="outline-4">
+<h4 id="orgb313bde"><span class="section-number-4">1.9.1.</span> <a href="#orgb313bde">Everything is a file</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 <a href="https://blog.sunfishcode.online/">sunfishcode</a> 的 "Everything Is A File" 系列博文
@@ -780,8 +780,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org8404558" class="outline-4">
-<h4 id="org8404558"><span class="section-number-4">1.9.2.</span> <a href="#org8404558">SQLite</a></h4>
+<div id="outline-container-orgced9c76" class="outline-4">
+<h4 id="orgced9c76"><span class="section-number-4">1.9.2.</span> <a href="#orgced9c76">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-2">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -795,8 +795,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org6e3a25b" class="outline-3">
-<h3 id="org6e3a25b"><span class="section-number-3">1.10.</span> <a href="#org6e3a25b">关于workflow</a></h3>
+<div id="outline-container-orgbfe008f" class="outline-3">
+<h3 id="orgbfe008f"><span class="section-number-3">1.10.</span> <a href="#orgbfe008f">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -806,8 +806,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-orgdbfc0c5" class="outline-2">
-<h2 id="orgdbfc0c5"><span class="section-number-2">2.</span> <a href="#orgdbfc0c5">棒棒视频</a></h2>
+<div id="outline-container-orgb64c309" class="outline-2">
+<h2 id="orgb64c309"><span class="section-number-2">2.</span> <a href="#orgb64c309">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -866,8 +866,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgc5635bf" class="outline-3">
-<h3 id="orgc5635bf"><span class="section-number-3">2.1.</span> <a href="#orgc5635bf">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgfa0a22e" class="outline-3">
+<h3 id="orgfa0a22e"><span class="section-number-3">2.1.</span> <a href="#orgfa0a22e">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -898,8 +898,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org190ed9c" class="outline-3">
-<h3 id="org190ed9c"><span class="section-number-3">2.2.</span> <a href="#org190ed9c">迷因水母</a></h3>
+<div id="outline-container-orgfe90161" class="outline-3">
+<h3 id="orgfe90161"><span class="section-number-3">2.2.</span> <a href="#orgfe90161">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -914,8 +914,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfb81bd5" class="outline-3">
-<h3 id="orgfb81bd5"><span class="section-number-3">2.3.</span> <a href="#orgfb81bd5">纪录片</a></h3>
+<div id="outline-container-org0adb49e" class="outline-3">
+<h3 id="org0adb49e"><span class="section-number-3">2.3.</span> <a href="#org0adb49e">纪录片</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/35506331/">晚安机遇号</a> Oppy的15年</li>
@@ -923,8 +923,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0aad68a" class="outline-3">
-<h3 id="org0aad68a"><span class="section-number-3">2.4.</span> <a href="#org0aad68a">各种剧</a></h3>
+<div id="outline-container-orgd2aa696" class="outline-3">
+<h3 id="orgd2aa696"><span class="section-number-3">2.4.</span> <a href="#orgd2aa696">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -948,8 +948,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8bbba2e" class="outline-3">
-<h3 id="org8bbba2e"><span class="section-number-3">2.5.</span> <a href="#org8bbba2e">电影</a></h3>
+<div id="outline-container-org6ced972" class="outline-3">
+<h3 id="org6ced972"><span class="section-number-3">2.5.</span> <a href="#org6ced972">电影</a></h3>
 <div class="outline-text-3" id="text-2-5">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -975,7 +975,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org9d2872c">
+<figure id="orge3ff419">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -993,8 +993,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgedc22f2" class="outline-2">
-<h2 id="orgedc22f2"><span class="section-number-2">3.</span> <a href="#orgedc22f2">快乐游戏</a></h2>
+<div id="outline-container-org091739c" class="outline-2">
+<h2 id="org091739c"><span class="section-number-2">3.</span> <a href="#org091739c">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -1024,8 +1024,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc7b0609" class="outline-2">
-<h2 id="orgc7b0609"><span class="section-number-2">4.</span> <a href="#orgc7b0609">宝藏博主</a></h2>
+<div id="outline-container-org3228740" class="outline-2">
+<h2 id="org3228740"><span class="section-number-2">4.</span> <a href="#org3228740">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1036,7 +1036,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org6768ddc">
+<figure id="orge7d8162">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1044,8 +1044,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org86758bb" class="outline-2">
-<h2 id="org86758bb"><span class="section-number-2">5.</span> <a href="#org86758bb">有意思的</a></h2>
+<div id="outline-container-org27f0959" class="outline-2">
+<h2 id="org27f0959"><span class="section-number-2">5.</span> <a href="#org27f0959">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1071,8 +1071,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org5a8ad19" class="outline-3">
-<h3 id="org5a8ad19"><span class="section-number-3">5.1.</span> <a href="#org5a8ad19">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orga665ab7" class="outline-3">
+<h3 id="orga665ab7"><span class="section-number-3">5.1.</span> <a href="#orga665ab7">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1084,8 +1084,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgc449c93" class="outline-2">
-<h2 id="orgc449c93"><span class="section-number-2">6.</span> <a href="#orgc449c93">我想玩的</a></h2>
+<div id="outline-container-org69c8067" class="outline-2">
+<h2 id="org69c8067"><span class="section-number-2">6.</span> <a href="#org69c8067">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1108,7 +1108,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-08 10:53</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-10 02:43</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-11 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/index.org">index.org</a></td></tr>
 </table>
