--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-10 02:43 -->
+<!-- 2022-12-11 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org95b674e">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org94e9581">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#orged79159">1.1. window config &amp; register</a></li>
-<li><a href="#org2cbbb59">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orge8e6e38">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgfc68e1e">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org3cb6742">1.1. window config &amp; register</a></li>
+<li><a href="#orgbe37de0">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orge4ff5e5">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgb5a6d74">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org95b674e" class="outline-2">
-<h2 id="org95b674e"><span class="section-number-2">1.</span> <a href="#org95b674e">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org94e9581" class="outline-2">
+<h2 id="org94e9581"><span class="section-number-2">1.</span> <a href="#org94e9581">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orged79159" class="outline-3">
-<h3 id="orged79159"><span class="section-number-3">1.1.</span> <a href="#orged79159">window config &amp; register</a></h3>
+<div id="outline-container-org3cb6742" class="outline-3">
+<h3 id="org3cb6742"><span class="section-number-3">1.1.</span> <a href="#org3cb6742">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org2cbbb59" class="outline-3">
-<h3 id="org2cbbb59"><span class="section-number-3">1.2.</span> <a href="#org2cbbb59"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgbe37de0" class="outline-3">
+<h3 id="orgbe37de0"><span class="section-number-3">1.2.</span> <a href="#orgbe37de0"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orge8e6e38" class="outline-3">
-<h3 id="orge8e6e38"><span class="section-number-3">1.3.</span> <a href="#orge8e6e38"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orge4ff5e5" class="outline-3">
+<h3 id="orge4ff5e5"><span class="section-number-3">1.3.</span> <a href="#orge4ff5e5"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgfc68e1e" class="outline-3">
-<h3 id="orgfc68e1e"><span class="section-number-3">1.4.</span> <a href="#orgfc68e1e"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgb5a6d74" class="outline-3">
+<h3 id="orgb5a6d74"><span class="section-number-3">1.4.</span> <a href="#orgb5a6d74"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-10 02:43</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-11 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2021-05-23.org">2021-05-23.org</a></td></tr>
 </table>
